<resources>
    <string name="app_name">DMS</string>
    <string name="navigation_meal">급식</string>
    <string name="navigation_apply">신청</string>
    <string name="navigation_chatting">채팅</string>
    <string name="navigation_mypage">마이페이지</string>

    // main
    <string name="apply_main_title_tv">신청</string>
    <string name="apply_main_staying_title_tv">귀가 신청</string>
    <string name="apply_main_staying_content_tv">금요일부터 일요일까지의 상태를 신청합니다</string>
    <string name="apply_main_studying_title_tv">연장 신청</string>
    <string name="apply_main_studying_content_tv">기숙사에서 연장학습을 신청합니다</string>
    <string name="apply_main_going_out_title_tv">외출 신청</string>
    <string name="apply_main_going_out_content_tv">외출 신청서를 작성하여 외출을 신청합니다</string>
    <string name="apply_main_music_title_tv">기상음악 신청</string>
    <string name="apply_main_music_content_tv">아침 점호를 알리는 기상음악을 신청합니다</string>
    <string name="apply_main_rest_title_tv">휴식 신청</string>
    <string name="apply_main_rest_content_tv">일요일 호실 휴식을 신청합니다</string>

    // staying
    <string name="apply_staying_title_tv">귀가 신청</string>
    <string name="apply_staying_content_tv">금요일 밤부터 일요일 밤까지의 상태를 선택합니다 \n 목요일 오후 10시까지 잔류 신청을 완료해야 합니다</string>
    <string name="apply_staying_friday_go_title_tv">금요귀가</string>
    <string name="apply_staying_friday_go_content_tv">금요일 일과 후 귀가합니다</string>
    <string name="apply_staying_saturday_go_title_tv">토요귀가</string>
    <string name="apply_staying_saturday_go_content_tv">토요일 취침 점호 전까지 귀가합니다</string>
    <string name="apply_staying_saturday_back_title_tv">토요귀사</string>
    <string name="apply_staying_saturday_back_content_tv">금요귀가 후 토요일 취침 점호 전까지 귀사합니다</string>
    <string name="apply_staying_staying_title_tv">잔류</string>
    <string name="apply_staying_staying_content_tv">기숙사에 잔류합니다</string>

    // meal
    <string name="meal_item_breakfast_tv">아침</string>
    <string name="meal_item_lunch_tv">점심</string>
    <string name="meal_item_dinner_tv">저녁</string>

    // account
    <string name="login_text">로그인</string>
    <string name="login_auto_login">자동 로그인</string>
    <string name="login_is_not_dms_user">아직 DMS 회원이 아니시라면?</string>
    <string name="login_register">회원가입</string>
    <string name="sign_id_hint">아이디를 입력해주세요</string>
    <string name="sign_pw_hint">비밀번호를 입력해주세요</string>
    <string name="sign_pw_retry_hint">비밀번호를 다시 입력해주세요</string>
    <string name="account_info_input">계정 정보 입력</string>
    <string name="account_check_code_input">확인코드 입력</string>
    <string name="account_check_code_input_edit">확인코드를 입력해주세요</string>
    <string name="account_check_code_result_success">인증에 성공하였습니다\n계속 진행해 주세요</string>
    <string name="account_check_code_result_failure">인증에 실패하였습니다\n코드를 확인하신 후 다시 인증해 주세요</string>
    <string name="register_complete_btn_text">완료</string>
    <string name="register_complete_title_text">회원가입 완료</string>
    <string name="register_complete_description_text">이제부터 DMS를 사용하실 수 있습니다</string>

    // extension
    <string name="extension_title">연장 신청</string>
    <string name="extension_description">기숙사로 이동 후 학생들은 연장학습을 할 수 있습니다. \n 11시 연장은 8시 반까지, 12시 연장은 10시 반까지 신청할 수 있습니다.</string>
    <string name="extension_first_floor_title">1층</string>
    <string name="extension_second_floor_title">2층</string>
    <string name="extension_third_floor_title">3층</string>
    <string name="extension_fourth_floor_title">4층</string>
    <string name="extension_fifth_floor_title">5층</string>
    <string name="extension_first_floor_first_room">가온실</string>
    <string name="extension_first_floor_second_room">나온실</string>
    <string name="extension_first_floor_third_room">다온실</string>
    <string name="extension_first_floor_fourth_room">라온실</string>
    <string name="extension_second_floor_first_room">자습실</string>
    <string name="extension_third_floor_first_room">학교측</string>
    <string name="extension_third_floor_second_room">기숙사측</string>
    <string name="extension_third_floor_third_room">소파</string>
    <string name="extension_fourth_floor_first_room">학교측</string>
    <string name="extension_fourth_floor_second_room">기숙사측</string>
    <string name="extension_fifth_floor_first_room">자습실</string>
    <string name="extension_apply_text">신청</string>
    <string name="extension_apply_eleven_text">11시</string>
    <string name="extension_apply_twelve_text">12시</string>
    
    // mydata
    <string name="mypage_mydata_staying_status_title">귀가 상태</string>
    <string name="mypage_mydata_good_point_status_title">상점</string>
    <string name="mypage_mydata_bad_point_status_title">벌점</string>
    <string name="mypage_mydata_extension_eleven_status_title">11시</string>
    <string name="mypage_mydata_extension_twelve_status_title">12시</string>
    <string name="mypage_mydata_going_out_saturday_status_title">토요 외출</string>
    <string name="mypage_mydata_going_out_sunday_status_title">일요 외출</string>
    
    // etc
    <string name="mypage_etc_title">기타</string>
    <string name="mypage_etc_password_change_title">비밀번호 변경</string>
    <string name="mypage_etc_password_change_content">현재 계정의 비밀번호를 변경합니다.</string>
    <string name="mypage_etc_bug_report_title">버그 신고</string>
    <string name="mypage_etc_bug_report_content">DMS 사용 중에 발견된 버그를 신고합니다.</string>
    <string name="mypage_etc_point_log_title">상・벌점 내역</string>
    <string name="mypage_etc_point_log_content">상・벌점 내역을 확인합니다.</string>
    <string name="mypage_etc_logout_title">로그아웃</string>
    <string name="mypage_etc_logout_content">현재 계정에서 로그아웃을 합니다.</string>
    <string name="mypage_etc_notice_title">공지사항</string>
    <string name="mypage_etc_notice_content">기숙사의 공지사항을 확인합니다.</string>
    
    // setting
    <string name="mypage_setting_title">설정</string>
    <string name="mypage_setting_dark_mode_title">다크모드</string>
    <string name="mypage_setting_dark_mode_content">DMS 테마를 다크모드로 설정할 수 있습니다.</string>
    <string name="mypage_setting_extension_alert_title">연장 신청 알림</string>
    <string name="mypage_setting_extension_alert_content">연장학습 신청이 끝나기 15분 전에 알립니다.</string>
    <string name="mypage_setting_staying_alert_title">귀가 신청 알림</string>
    <string name="mypage_setting_staying_alert_content">귀가 신청이 끝나기 15분 전에 알립니다.</string>
    <string name="mypage_setting_notice_alert_title">공지사항 알림</string>
    <string name="mypage_setting_notice_alert_content">새로운 공지사항을 알립니다.</string>

    // change password
    <string name="change_password_title">비밀번호 변경</string>
    <string name="change_password_origin_password_hint">기존 비밀번호를 입력해주세요</string>
    <string name="change_password_change_password_hint">변경할 비밀번호를 입력해주세요</string>
    <string name="change_password_change_password_check_hint">변경할 비밀번호를 다시 입력해주세요</string>
    <string name="change_password_change">변경</string>

    // bug report
    <string name="bug_report_title">버그 신고</string>
    <string name="bug_report_title_hint">제목를 입력해주세요</string>
    <string name="bug_report_content_hint">내용를 입력해주세요</string>
    <string name="bug_report_send">전송</string>
    
    // point
    <string name="point_title">상・벌점 내역</string>

    // notice
    <string name="notice_list_title">공지사항</string>

    // logout
    <string name="logout_dialog_title">로그아웃</string>
    <string name="logout_dialog_content">정말로 로그아웃 하시겠습니까?</string>
    <string name="logout_dialog_okay">확인</string>
    <string name="logout_dialog_no">아니오</string>

    // rest
    <string name="weekend_rest_title">휴식 신청</string>
    <string name="weekend_rest_description">일요일 자습 시간 때 호실 휴식을 신청할 수 있습니다</string>
    <string name="weekend_rest_am_rest_title">오전 자습 휴식</string>
    <string name="weekend_rest_am_rest_description">일요일 오전 자습 시간 때 호실 휴식을 합니다</string>
    <string name="weekend_rest_pm_rest_title">오후 자습 휴식</string>
    <string name="weekend_rest_pm_rest_description">일요일 오후 자습 시간 때 호실 휴식을 합니다</string>

    // music
    <string name="music_day_list_title">기상음악 신청</string>
    <string name="music_day_list_content">기상 음악을 신청할 수 있습니다. \n 요일 별로 신청 가능하며 상시 신청 가능합니다.</string>
    <string name="music_day_list_monday">월요일</string>
    <string name="music_day_list_tuesday">화요일</string>
    <string name="music_day_list_wednesday">수요일</string>
    <string name="music_day_list_thursday">목요일</string>
    <string name="music_day_list_friday">금요일</string>
    <string name="music_apply_music_title_hint">노래 제목을 입력해주세요</string>
    <string name="music_apply_music_artist_hint">아티스트를 입력해주세요</string>
    
    // chat
    <string name="chat_send_box_hint">메세지를 입력하세요...</string>

</resources>
