<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.dsm.dms.presentation.viewmodel.main.apply.extension.ApplyExtensionFloorListViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.AppCompatImageView
            android:onClick="@{() -> vm.backClick()}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="24dp"
            android:id="@+id/extension_floor_list_back_imv"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_back"
            android:tint="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/extension_floor_list_ic_imv"
            android:tint="@color/colorMain"
            android:src="@drawable/ic_studying"
            app:layout_constraintTop_toBottomOf="@id/extension_floor_list_back_imv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="54dp"
            android:layout_height="38dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/extension_floor_list_title_tv"
            android:text="@string/extension_title"
            android:textSize="18sp"
            android:textColor="@color/colorNightBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/extension_floor_list_ic_imv"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/extension_floor_list_description_tv"
            android:text="@string/extension_description"
            android:textSize="14sp"
            android:textColor="@color/colorNightBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/extension_floor_list_title_tv"
            android:paddingHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:onClick="@{() -> vm.firstFloorClick()}"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/extension_first_floor_card"
            app:layout_constraintTop_toBottomOf="@id/extension_floor_list_description_tv"
            app:layout_constraintBottom_toTopOf="@id/extension_second_floor_card"
            app:cardCornerRadius="14dp"
            app:cardElevation="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="@color/colorNightBlack"
                android:padding="16dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/extension_first_floor_tv"
                android:text="@string/extension_first_floor_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="@{() -> vm.secondFloorClick()}"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/extension_second_floor_card"
            app:layout_constraintTop_toBottomOf="@id/extension_first_floor_card"
            app:layout_constraintBottom_toTopOf="@id/extension_third_floor_card"
            app:cardCornerRadius="14dp"
            app:cardElevation="4dp"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="@color/colorNightBlack"
                android:padding="16dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/extension_second_floor_tv"
                android:text="@string/extension_second_floor_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="@{() -> vm.thirdFloorClick()}"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/extension_third_floor_card"
            app:layout_constraintTop_toBottomOf="@id/extension_second_floor_card"
            app:layout_constraintBottom_toTopOf="@id/extension_fourth_floor_card"
            app:cardCornerRadius="14dp"
            app:cardElevation="4dp"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="@color/colorNightBlack"
                android:padding="16dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/extension_third_floor_tv"
                android:text="@string/extension_third_floor_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="@{() -> vm.fourthFloorClick()}"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/extension_fourth_floor_card"
            app:layout_constraintTop_toBottomOf="@id/extension_third_floor_card"
            app:layout_constraintBottom_toTopOf="@id/extension_fifth_floor_card"
            app:cardCornerRadius="14dp"
            app:cardElevation="4dp"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="@color/colorNightBlack"
                android:padding="16dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/extension_fourth_floor_tv"
                android:text="@string/extension_fourth_floor_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="@{() -> vm.fifthFloorClick()}"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/extension_fifth_floor_card"
            app:layout_constraintTop_toBottomOf="@id/extension_fourth_floor_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="14dp"
            app:cardElevation="4dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="24dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="16sp"
                android:textColor="@color/colorNightBlack"
                android:padding="16dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/extension_fifth_floor_tv"
                android:text="@string/extension_fifth_floor_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>