<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.dsm.dms.presentation.viewmodel.main.mypage.etc.change.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/change_password_back_imv"
            android:onClick="@{() -> vm.backClick()}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_back"
            android:tint="@color/colorNightBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/change_password_icon_imv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_big_change"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="@id/change_password_back_imv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/change_password_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password_title"
            android:textSize="18sp"
            android:textColor="@color/colorNightBlack"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_password_icon_imv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/change_password_origin_password_edit"
            style="@style/SignEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginHorizontal="24dp"
            android:drawableStart="@drawable/ic_pw"
            android:drawablePadding="16dp"
            android:hint="@string/change_password_origin_password_hint"
            android:inputType="textPassword"
            android:lineSpacingExtra="1sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@={vm.originPassword}"
            android:textColor="@color/colorNightBlack"
            android:textSize="12sp"
            android:theme="@style/SignEditTextStyle"
            app:layout_constraintTop_toBottomOf="@id/change_password_title_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/change_password_new_password_tv"
            style="@style/SignEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="24dp"
            android:drawableStart="@drawable/ic_small_change"
            android:drawablePadding="16dp"
            android:hint="@string/change_password_change_password_hint"
            android:inputType="textPassword"
            android:lineSpacingExtra="1sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@={vm.newPassword}"
            android:textColor="@color/colorNightBlack"
            android:textSize="12sp"
            android:theme="@style/SignEditTextStyle"
            app:layout_constraintTop_toBottomOf="@id/change_password_origin_password_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/change_password_new_password_check_tv"
            style="@style/SignEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="24dp"
            android:drawableStart="@drawable/ic_check"
            android:drawablePadding="16dp"
            android:hint="@string/change_password_change_password_check_hint"
            android:inputType="textPassword"
            android:lineSpacingExtra="1sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@={vm.newPasswordCheck}"
            android:textColor="@color/colorNightBlack"
            android:textSize="12sp"
            android:theme="@style/SignEditTextStyle"
            app:layout_constraintTop_toBottomOf="@id/change_password_new_password_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/change_password_change_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/change_password_change"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:padding="13dp"
            android:background="@color/colorMain"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> vm.clickChange()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
