<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.dsm.dms.presentation.viewmodel.sign.register.RegisterCompleteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/register_complete_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/register_complete_dms_logo_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_maybe"
                app:layout_constraintBottom_toTopOf="@+id/register_complete_title_tv"
                app:layout_constraintDimensionRatio="v,2:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/register_complete_title_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="0dp"
                android:text="@string/register_complete_title_text"
                android:textColor="@color/colorSignMain"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/register_complete_description_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_complete_dms_logo_img" />

            <TextView
                android:id="@+id/register_complete_description_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="4dp"
                android:text="@string/register_complete_description_text"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_complete_title_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_complete_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorMain"
            android:lineSpacingExtra="3sp"
            android:onClick="@{()->vm.completeClick()}"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/register_complete_btn_text"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:cornerRadius="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
